<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white"
    android:padding="@dimen/size_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer_label"
        style="@style/TextBody.Subtitle.Major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/d_stopwatch_settings_time_limit"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_timer_limit_minutes"
        style="@style/EditText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/list_subtitle_spacing_bottom"
        android:hint="@string/d_stopwatch_settings_time_limit_m_hint"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toStartOf="@+id/edit_timer_limit_separator"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edit_player1"
        app:layout_constraintTop_toBottomOf="@+id/timer_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_timer_limit_separator"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/size_4"
        android:text="@string/d_stopwatch_settings_time_limit_separator"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/edit_timer_limit_minutes"
        app:layout_constraintEnd_toStartOf="@+id/d_timer_settings_edit_limit_seconds"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_timer_limit_minutes"
        app:layout_constraintTop_toTopOf="@+id/edit_timer_limit_minutes" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/d_timer_settings_edit_limit_seconds"
        style="@style/EditText"
        android:layout_width="40dp"
        android:layout_height="wrap_content"

        android:hint="@string/d_stopwatch_settings_time_limit_s_hint"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:selectAllOnFocus="true"

        app:layout_constraintBottom_toBottomOf="@+id/edit_timer_limit_minutes"
        app:layout_constraintEnd_toEndOf="@+id/edit_player1"
        app:layout_constraintStart_toEndOf="@+id/edit_timer_limit_separator"
        app:layout_constraintTop_toTopOf="@+id/edit_timer_limit_minutes" />

    <View
        android:id="@+id/divider"
        style="@style/ListDivider"

        android:layout_width="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_timer_limit_minutes"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/players_label"
        style="@style/TextBody.Subtitle.Major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/d_stopwatch_settings_players"

        app:layout_constraintEnd_toEndOf="@+id/timer_label"
        app:layout_constraintStart_toStartOf="@+id/timer_label"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_player1"
        style="@style/EditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/list_subtitle_spacing_bottom"
        android:hint="@string/d_stopwatch_settings_player1_hint"
        android:imeOptions="actionNext"
        android:inputType="textAutoCorrect|textAutoComplete|textCapWords"
        android:maxLength="20"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="@+id/players_label"
        app:layout_constraintStart_toStartOf="@+id/players_label"
        app:layout_constraintTop_toBottomOf="@+id/players_label" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_player2"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/list_items_vert_spacing"
        android:hint="@string/d_stopwatch_settings_player2_hint"
        android:imeOptions="actionDone"
        android:inputType="textAutoCorrect|textAutoComplete|textCapWords"
        android:maxLength="20"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="@+id/edit_player1"
        app:layout_constraintStart_toStartOf="@+id/edit_player1"
        app:layout_constraintTop_toBottomOf="@+id/edit_player1" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_swap_players"
        style="@style/Button.Small.RoundPlain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_swap_normal"

        app:layout_constraintBottom_toBottomOf="@+id/edit_player2"
        app:layout_constraintStart_toEndOf="@+id/edit_player1"
        app:layout_constraintTop_toTopOf="@+id/edit_player1"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        style="@style/Button.Small.RoundedSky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_8"
        android:background="@drawable/btn_rounded_sky_normal"
        android:text="@android:string/ok"
        android:textColor="@android:color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_player2" />

</androidx.constraintlayout.widget.ConstraintLayout>